[package]
name = "haver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rhai = "1.23.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.28"
env_logger = "0.10"
job_scheduler = "1.2.1"
